# seashell

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  taplo.toml
crates/seashell-core/: Cargo.toml
crates/seashell-core/src/: accounts_db.rs  compile.rs  error.rs  lib.rs  precompiles.rs  scenario.rs  seashell.rs  sysvar.rs
crates/seashell-core/src/spl/: mod.rs
crates/seashell-core/tests/: account-loader.rs  create-account.rs  sysvar.rs  sysvar_ixns.rs
programs/account-loader/: Cargo.toml
programs/account-loader/src/: lib.rs
programs/create-account/: Cargo.toml
programs/create-account/src/: lib.rs
programs/sysvar/: Cargo.toml
programs/sysvar/src/: lib.rs
programs/sysvar_ixns/: Cargo.toml
programs/sysvar_ixns/src/: lib.rs
scripts/: build-sbf.sh
src/: accounts_db.rs  compile.rs  lib.rs  seashell.rs  sysvar.rs
