[workspace]
members = ["crates/seashell-core"]
exclude = ["programs/account-loader", "programs/bench"]
resolver = "2"

[workspace.dependencies]
agave-feature-set = "2.3"
agave-precompiles = "2.3"
bincode = "1.3.3"
ed25519-dalek = "=1.0.1"
flate2 = "1.0.32"
indexmap = "2.9.0"
libsecp256k1 = "0.6.0"
log = "0.4.27"
openssl = "0.10.72"
rand = "0.7"
serde = "1.0.208"
serde_json = "1.0.141"
serde_with = { version = "3.9.0", features = ["hex"] }
solana-account = "2.2"
solana-bpf-loader-program = "2.3"
solana-builtins = "2.3"
solana-clock = "2.2"
solana-compute-budget = "2.3"
solana-ed25519-program = "2.2"
solana-epoch-rewards = "2.2"
solana-epoch-schedule = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-log-collector = "2.3"
solana-logger = "2.3"
solana-precompile-error = "2.2"
solana-program-runtime = "2.3"
solana-pubkey = "2.2"
solana-rent = "2.2"
solana-rpc-client = "2.3"
solana-rpc-client-api = "2.3"
solana-sdk-ids = "2.2"
solana-secp256k1-program = "2.2"
solana-secp256r1-program = "2.2"
solana-slot-hashes = "2.2"
solana-stake-interface = "1.0"
solana-stake-program = "2.3"
solana-svm-callback = "2.3.6"
solana-sysvar = "2.2"
solana-sysvar-id = "2.2"
solana-timings = "2.3"
solana-transaction-context = { version = "2.3", features = ["dev-context-only-utils"] }
tempfile = "3.8"
thiserror = "2.0.12"
