[workspace]
members = ["crates/seashell-core"]
exclude = ["programs/account-loader", "programs/sysvar", "programs/create-account"]
resolver = "2"

[workspace.dependencies]
agave-feature-set = "3.0.10"
agave-precompiles = "3.0.10"
agave-syscalls = "3.0.10"
bincode = "1.3.3"
ed25519-dalek = "=1.0.1"
flate2 = "1.0.32"
indexmap = "2.9.0"
libsecp256k1 = "0.6.0"
log = "0.4.27"
openssl = "0.10.72"
rand = "0.7"
serde = "1.0.208"
serde_json = "1.0.141"
serde_with = { version = "3.9.0", features = ["hex"] }
solana-account = "3.0"
solana-bpf-loader-program = "3.0.3"
solana-builtins = "3.0.3"
solana-clock = "3.0"
solana-compute-budget = "3.0.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-logger = "2.3"
solana-precompile-error = "3.0.0"
solana-program-runtime = "3.0.3"
solana-pubkey = "3.0.0"
solana-rent = "3.0.0"
solana-rpc-client = "3.0"
solana-rpc-client-api = "3.0"
solana-sdk-ids = "3.0.0"
solana-secp256k1-program = "3.0.0"
solana-secp256r1-program = "3.0.0"
solana-slot-hashes = "3.0.0"
solana-stake-interface = "2.0.1"
solana-stake-program = "3.0.3"
solana-svm-callback = "3.0.10"
solana-svm-log-collector = "3.0.10"
solana-svm-timings = "3.0.10"
solana-sysvar = "3.0.0"
solana-sysvar-id = "3.0.0"
solana-transaction-context = { version = "3.0.3", features = ["dev-context-only-utils"] }
tempfile = "3.8"
thiserror = "2.0.12"
