[package]
name = "seashell"
version = "0.1.0"
edition = "2021"

[[test]]
name = "account-loader"
path = "tests/account-loader.rs"

[[test]]
name = "sysvar-override"
path = "tests/sysvar.rs"

[[test]]
name = "create-account"
path = "tests/create-account.rs"

[dependencies]
agave-feature-set = { workspace = true }
agave-precompiles = { workspace = true }
agave-syscalls = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-account = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-builtins = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-logger = { workspace = true }
solana-precompile-error.workspace = true
solana-program-runtime.workspace = true
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-stake-interface = { workspace = true }
solana-svm-callback = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-timings = { workspace = true }
solana-sysvar = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-transaction-context = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
solana-ed25519-program = { workspace = true }
solana-secp256k1-program = { workspace = true, features = ["bincode"] }
solana-secp256r1-program = { workspace = true }
tempfile = { workspace = true }
